Fix spacing at bottom of page

--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -1,6 +1,6 @@
 .hero {
   display: flex;
-  min-height: calc(100vh - 74px);
+  min-height: calc(100vh - 72px);
   overflow: hidden;
 }
 
@@ -57,7 +57,7 @@
 
 .hero-content-info h1{
   font-size: 80px;
-  font-weight: 600p;
+  font-weight: 600;
   font-family: var(--playfair-display);
   color: var(--secondary-color);
 }
